change project url

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -18,7 +18,7 @@
     "language": "Yii2, Postgres",
     "description": "Decision Support Systems Application with SAW and WP Method.",
     "github": "https://github.com/MohammadAfandy/spk-app",
-    "link": "https://spk-app.herokuapp.com"
+    "link": "https://spk-app.mohammadafandy.com"
   },
   {
     "project": "Video App",
