--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,10 +1,17 @@
 [
   {
     "project": "COVID19 Statistic",
-    "language": "Node.js, React.js",
+    "language": "Node.js, Next.js",
     "description": "COVID 19 Statistic in Indonesia.",
-    "github": "https://github.com/MohammadAfandy/covid19-react",
+    "github": "https://github.com/MohammadAfandy/covid19-next",
     "link": "https://covid19.mohammadafandy.com/"
+  },
+  {
+    "project": "Livescore Football App",
+    "language": "Node.js, Express.js",
+    "description": "Simple Livescore Football App using ESPN API.",
+    "github": "https://github.com/MohammadAfandy/livescore-app",
+    "link": "https://livescore.mohammadafandy.com/"
   },
   {
     "project": "Calendar App",
