Update link radiosv

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "language": "Svelte",
     "description": "Stream and listen radio from round the world.",
     "github": "https://github.com/MohammadAfandy/radio-online",
-    "link": "https://radio-online-eight.vercel.app/"
+    "link": "https://radiosv.mohammadafandy.com/"
   },
   {
     "project": "Restopedia PWA",
